--- a/.github/workflows/scascan.yml
+++ b/.github/workflows/scascan.yml
@@ -8,7 +8,10 @@ jobs:
       - name: Snyk
       # You may pin to the exact commit or the version.
       # uses: snyk/actions@b98d498629f1c368650224d6d212bf7dfa89e4bf
-        uses: snyk/actions@0.4.0
+        uses: snyk/actions/gradle@master
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+          
         # with:
         #   # Which Snyk command to run, defaults to test
         #   command: # optional, default is test
