--- a/.github/workflows/scascan.yml
+++ b/.github/workflows/scascan.yml
@@ -5,10 +5,12 @@ jobs:
   run-SnykScan:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@master
+      # will take the replica of the workspace and do the scan in the checkout folder and not on our master branch
       - name: Snyk
       # You may pin to the exact commit or the version.
       # uses: snyk/actions@b98d498629f1c368650224d6d212bf7dfa89e4bf
-        uses: snyk/actions/gradle@master
+        uses: snyk/actions@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
           
