--- a/.github/workflows/scascan.yml
+++ b/.github/workflows/scascan.yml
@@ -10,7 +10,8 @@ jobs:
       - name: Snyk
       # You may pin to the exact commit or the version.
       # uses: snyk/actions@b98d498629f1c368650224d6d212bf7dfa89e4bf
-        uses: snyk/actions@master
+        uses: snyk/actions/maven@master
+        
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
           
